@@ -44,12 +44,10 @@ static void DoMove
     }
 }
 
-void fb_ConReadLineEx
-	(
-		FBSTRING *dst,
-		int soft_cursor
-	)
+FBCALL FBSTRING *fb_ConReadLine( int soft_cursor )
 {
+	FBSTRING result = { 0 };
+
     int current_x, current_y;
     int cols, rows;
     size_t pos, len, tmp_buffer_len = 0;
@@ -62,8 +60,8 @@ void fb_ConReadLineEx
     cursor_visible = (fb_Locate( 0, 0, -1, 0, 0 ) & 0x10000) != 0;
     fb_Locate( 0, 0, FALSE, 0, 0 );
 
-    pos = len = FB_STRSIZE(dst);
-    fb_PrintBufferEx( dst->data, len, 0 );
+    pos = len = 0;
+    fb_PrintBufferEx( NULL, 0, 0 );
 
     /* Ensure that the cursor is visible during INPUT */
     fb_Locate( 0, 0, (soft_cursor == FALSE), 0, 0 );
@@ -108,7 +106,7 @@ void fb_ConReadLineEx
 
 		if( soft_cursor )
 		{
-			char mask[2] = { ((dst->data != NULL) && (pos < len)? dst->data[pos]: ' '), '\0' };
+			char mask[2] = { ((result.data != NULL) && (pos < len)? result.data[pos]: ' '), '\0' };
 			fb_PrintFixString( 0, mask, 0 );
 			fb_Locate( current_y, current_x, FALSE, 0, 0 );
 		}
@@ -197,19 +195,19 @@ void fb_ConReadLineEx
 
         if( delete_char_count ) {
             FBSTRING *str_fill;
-            FBSTRING *str_tmp1 = fb_StrAllocTempDescV( dst );
-            FBSTRING *str_tmp2 = fb_StrAllocTempDescV( dst );
+            FBSTRING *str_tmp1 = fb_StrAllocTempDescV( &result );
+            FBSTRING *str_tmp2 = fb_StrAllocTempDescV( &result );
             FBSTRING *str_left = fb_StrMid( str_tmp1, 1, pos );
             FBSTRING *str_right = fb_StrMid( str_tmp2,
                                              pos + 1 + delete_char_count,
                                              len - pos - delete_char_count);
-            fb_StrAssign( dst, -1, str_left, -1, FALSE );
-            fb_StrConcatAssign( dst, -1, str_right, -1, FALSE );
+            fb_StrAssign( &result, -1, str_left, -1, FALSE );
+            fb_StrConcatAssign( &result, -1, str_right, -1, FALSE );
             len -= delete_char_count;
 
             FB_LOCK();
 
-            fb_PrintBufferEx( dst->data + pos, len - pos, 0 );
+            fb_PrintBufferEx( result.data + pos, len - pos, 0 );
 
             /* Overwrite all deleted characters with SPC's */
             str_fill = fb_StrFill1 ( delete_char_count, ' ' );
@@ -228,18 +226,18 @@ void fb_ConReadLineEx
         if( add_char ) {
             int old_x = current_x, old_y = current_y;
             FBSTRING *str_add = fb_StrAllocTempDescF( tmp_buffer, tmp_buffer_len + 1 );
-            FBSTRING *str_tmp1 = fb_StrAllocTempDescV( dst );
-            FBSTRING *str_tmp2 = fb_StrAllocTempDescV( dst );
+            FBSTRING *str_tmp1 = fb_StrAllocTempDescV( &result );
+            FBSTRING *str_tmp2 = fb_StrAllocTempDescV( &result );
             FBSTRING *str_left = fb_StrMid( str_tmp1, 1, pos );
             FBSTRING *str_right = fb_StrMid( str_tmp2, pos + 1, len - pos);
-            fb_StrAssign( dst, -1, str_left, -1, FALSE );
-            fb_StrConcatAssign( dst, -1, str_add, -1, FALSE );
-            fb_StrConcatAssign( dst, -1, str_right, -1, FALSE );
+            fb_StrAssign( &result, -1, str_left, -1, FALSE );
+            fb_StrConcatAssign( &result, -1, str_add, -1, FALSE );
+            fb_StrConcatAssign( &result, -1, str_right, -1, FALSE );
             len += tmp_buffer_len;
 
             FB_LOCK();
 
-            fb_PrintBufferEx( dst->data + pos, len - pos, 0 );
+            fb_PrintBufferEx( result.data + pos, len - pos, 0 );
 
             fb_GetXY(&current_x, &current_y);
 
@@ -275,16 +273,6 @@ void fb_ConReadLineEx
     fb_Locate( 0, 0, cursor_visible, 0, 0 );
 
     FB_UNLOCK();
-}
 
-
-FBCALL FBSTRING *fb_ConReadLine
-	(
-		int soft_cursor
-	)
-{
-    FBSTRING *tmp = fb_hStrAllocTmpDesc();
-    if( tmp!=NULL )
-        fb_ConReadLineEx( tmp, soft_cursor );
-    return tmp;
+	return fb_StrAllocTempResult( &result );
 }
